# pulse

./: Anchor.toml  Cargo.toml  README.md  docker-compose.test.yml  package.json  tsconfig.json
app/: jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
app/app/: globals.css  layout.tsx  manifest.json  page.tsx
app/app/create/: page.tsx
app/app/manage/: page.tsx
app/app/offline/: page.tsx
app/components/create/: MarketCreationForm.tsx  MarketPreview.tsx
app/components/dashboard/: UserDashboard.tsx
app/components/gamification/: AchievementToast.tsx  SwipeStreak.tsx
app/components/layout/: Footer.tsx  Navigation.tsx
app/components/manage/: MarketAnalytics.tsx  (+2 more)
app/hooks/: usePWA.ts
app/lib/: arciumClient.ts  mockData.ts  oracleSystem.ts
app/public/: sw.js
app/sdk/: prediction-markets-sdk.ts
app/styles/: mobile.css
app/tests/: arcium-integration.test.ts  setup.ts
app/types/: market.ts
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: advance.rs  lib.rs  simple.rs
programs/prediction_markets/: Cargo.toml
programs/prediction_markets/computations/: calculate_oracle_consensus.arcis  detect_manipulation_patterns.arcis  submit_encrypted_oracle_vote.arcis
programs/prediction_markets/src/: lib.rs  lib_full.rs  oracle_system.rs  oracle_system_simple.rs
tests/: prediction-markets-oracle.ts  prediction_markets.ts  zenithveil.ts
tests/integration/: arcium-integration.test.ts
tests/performance/: benchmark.test.ts  load-testing.js
tests/security/: privacy-validation.test.ts
(+22 files in other folders)
