[package]
name = "prediction_markets"
version = "0.1.0"
description = "Tinder-style prediction markets with Arcium privacy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_markets"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

arcium-client = { version = "0.3.0", default-features = false }
arcium-macros = { version = "0.3.0" }
arcium-anchor = { version = "0.3.0" }

# [dev-dependencies]
# solana-program-test = "~1.18.26"
# solana-sdk = "~1.18.26"
# tokio = { version = "1", features = ["full"] }